Ditch Connexion
- Refactor notes and users modules using blueprints (WIP)
- Separate schemas into an independent module
