# models.py
@@ -1,49 +1,29 @@
 from datetime import datetime, timezone
-from config import db, ma
-from marshmallow_sqlalchemy import fields
+from config import db
 
 
 class Note(db.Model):
     __tablename__ = "note"
     id = db.Column(db.Integer, primary_key=True)
-    person_id = db.Column(db.Integer, db.ForeignKey("person.id"))
+    person_id = db.Column(db.Integer, db.ForeignKey("user.id"))
     content = db.Column(db.String, nullable=False)
     timestamp = db.Column(
         db.DateTime, default=datetime.now(timezone.utc), onupdate=datetime.now(timezone.utc)
     )
 
-class NoteSchema(ma.SQLAlchemyAutoSchema):
-    class Meta:
-        model = Note
-        load_instance = True
-        sqla_session = db.session
-        include_fk = True
 
-
-class Person(db.Model):
-    __tablename__ = "person"
+class User(db.Model):
+    __tablename__ = "user"
     id = db.Column(db.Integer, primary_key=True)
-    lname = db.Column(db.String(32), unique=True)
-    fname = db.Column(db.String(32))
+    username = db.Column(db.String(32), unique=True)
+    password = db.Column(db.String(120))
     timestamp = db.Column(
         db.DateTime, default=datetime.now(timezone.utc), onupdate=datetime.now(timezone.utc)
     )
     notes = db.relationship(
         Note,
-        backref="person",
+        backref="user",
         cascade="all, delete, delete-orphan",
         single_parent=True,
         order_by="desc(Note.timestamp)"
     )
-
-class PersonSchema(ma.SQLAlchemyAutoSchema):
-    class Meta:
-        model = Person
-        load_instance = True
-        sqla_session = db.session
-        include_relationships = True
-    notes = fields.Nested(NoteSchema, many=True)
-
-note_schema = NoteSchema()
-person_schema = PersonSchema()
-people_schema = PersonSchema(many=True)
